--- a/libs/users-client/feed/ui/feeds/src/lib/feeds/feeds.component.html
+++ b/libs/users-client/feed/ui/feeds/src/lib/feeds/feeds.component.html
@@ -1,6 +1,6 @@
 <div class="feeds h-auto mb-16 md:px-24">
 
-
+   <div *ngIf="!posts || posts.length === 0" class="nofeed">No feed to show! Get start by following your friends</div>
   <fs-feed-item *ngFor="let post of posts" [userId]="userId" [user]="getPostedUser(post.userId)" [username]="username" [post]="post"></fs-feed-item>
 
 </div>
