--- a/libs/users-client/post/feature/single-post-view/src/lib/single-post-view/single-post-view.component.html
+++ b/libs/users-client/post/feature/single-post-view/src/lib/single-post-view/single-post-view.component.html
@@ -105,7 +105,7 @@
 
       <div class="flex-grow items-center pr-1 flex justify-between">
         <mat-icon class="material-symbols-outlined">add_comment</mat-icon>
-        <mat-icon class="material-symbols-outlined">bookmark</mat-icon>
+        <!-- <mat-icon class="material-symbols-outlined">bookmark</mat-icon> -->
        
       </div>
 
