--- a/libs/users-client/post/ui/feed-item/src/lib/feed-item/feed-item.component.html
+++ b/libs/users-client/post/ui/feed-item/src/lib/feed-item/feed-item.component.html
@@ -13,7 +13,7 @@
       <span>{{user.username}}</span>
     </div>
 
-    <mat-icon>more_vert</mat-icon>
+    <!-- <mat-icon>more_vert</mat-icon> -->
 
   </div>
 
@@ -37,7 +37,7 @@
 
 
     <div class="text-xl">
-      <mat-icon>bookmark_outlined</mat-icon>
+      <!-- <mat-icon>bookmark_outlined</mat-icon> -->
     </div>
 
 
