--- a/libs/users-client/profile/feature/src/lib/profile.component.html
+++ b/libs/users-client/profile/feature/src/lib/profile.component.html
@@ -20,20 +20,20 @@
           </div>
         </mat-tab>
 
-        <mat-tab>
+        <!-- <mat-tab>
           <ng-template mat-tab-label>
             <mat-icon class="example-tab-icon">menu_book</mat-icon>
           </ng-template>
           Content 2
-        </mat-tab>
+        </mat-tab> -->
 
-        <mat-tab>
+        <!-- <mat-tab>
           <ng-template mat-tab-label>
             <mat-icon class="example-tab-icon">sell</mat-icon>
           </ng-template>
 
           Content 3
-        </mat-tab>
+        </mat-tab> -->
       </mat-tab-group>
     </div>
   </div>
