--- a/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
+++ b/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
@@ -14,7 +14,7 @@
       </div>
     
       <div class="tabs w-full h-screen mt-8 flex space-y-6 flex-col ">
-        <a href="" routerLink="/">
+        <a routerLink="/">
           <div class="home flex items-center h-8 space-x-3">
             <mat-icon class="active">home</mat-icon>
             <span class="text-lg">Home</span>
@@ -23,7 +23,7 @@
     
      <button (click)="drawer.toggle()">
       <div class="home flex items-center h-8 space-x-3">
-        <mat-icon class="material-symbols-outlined">search</mat-icon>
+        <mat-icon>person_search</mat-icon>
         <span class="text-lg">Search</span>
       </div>
 
@@ -35,37 +35,37 @@
          <span class="text-lg">Explore</span>
        </div> -->
     
-       <div class="home flex items-center h-8 space-x-3">
+       <!-- <div class="home flex items-center h-8 space-x-3">
         <mat-icon class="material-symbols-outlined">chat</mat-icon>
         <span class="text-lg">Messages</span>
-      </div>
+      </div> -->
     
-    
+<!--     
        <div class="home flex items-center h-8 space-x-3">
          <mat-icon class="material-symbols-outlined">favorite</mat-icon>
          <span class="text-lg">Notification</span>
-       </div>
+       </div> -->
        
     
        <button (click)="openCreateNewPostDialogBox()">
         <div class="home flex items-center h-8 space-x-3">
-          <mat-icon class="material-symbols-outlined">add</mat-icon>
-          <span class="text-lg">Create</span>
+          <mat-icon>add_a_photo</mat-icon>
+          <span class="text-lg">Post</span>
         </div>
        </button>
     
       
-       <a [routerLink]="profilePageLink | async">
+       <a [routerLink]="profilePageLink | async" >
         <div class="home flex items-center h-8 space-x-3">
-          <mat-icon class="material-symbols-outlined">person</mat-icon>
+          <mat-icon>person</mat-icon>
           <span class="text-lg">Profile</span>
         </div>
        </a>
-    
+<!--     
        <div class="home flex items-center h-8 space-x-3">
         <mat-icon class="material-symbols-outlined">more_vert</mat-icon>
         <span class="text-lg">More</span>
-      </div>
+      </div> -->
       </div>
            
     
