--- a/libs/admins-client/users/src/lib/users/users.component.html
+++ b/libs/admins-client/users/src/lib/users/users.component.html
@@ -78,3 +78,4 @@
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
+<mat-paginator [length]="count" (page)="handlePageEvent($event)" [pageSizeOptions]="[25, 50, 100, 200]"></mat-paginator>
