feat: implemented posts created graph

--- a/libs/admins-client/dashboard/src/lib/dashboard/dashboard.component.html
+++ b/libs/admins-client/dashboard/src/lib/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <canvas baseChart [data]="lineChartData"  [type]="'line'"> </canvas>
+          <canvas baseChart [data]="postData"  [type]="'line'"> </canvas>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
