[admins-client] feat: logout user

--- a/libs/admins-client/layout/src/lib/layout/layout.component.html
+++ b/libs/admins-client/layout/src/lib/layout/layout.component.html
@@ -25,6 +25,15 @@
          </a>
       </li>
 
+      <li>
+        <button (click)="logout()" class="flex items-center p-2 text-gray-900 rounded-lg   group">
+          <mat-icon class="material-symbols-outlined" >logout</mat-icon>
+          <span class="flex-1 ms-3 whitespace-nowrap">Logout</span>
+        </button>
+
+     </li>
+
+
      </ul>
   </div>
 </aside>
