--- a/libs/users-client/feed/feature/src/lib/feed.component.html
+++ b/libs/users-client/feed/feature/src/lib/feed.component.html
@@ -42,7 +42,7 @@
 
     </div>
 
-     <fs-mini-notifications></fs-mini-notifications>
+     <!-- <fs-mini-notifications></fs-mini-notifications> -->
   </div>
 
 </div>
