--- a/libs/users-client/notifications/src/lib/notifications/notifications.component.html
+++ b/libs/users-client/notifications/src/lib/notifications/notifications.component.html
@@ -1,7 +1,7 @@
 
 <div class="notifications w-full px-5 pt-5 ">
       
-  <div class="pt-9 bg-red-700">
+  <div class="pt-9">
    <span class="text-2xl text-black">Notifications</span>
   </div>
 
