--- a/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
+++ b/libs/users-client/shared/ui/sidebar-layout/src/lib/sidebar-layout/sidebar-layout.component.html
@@ -45,7 +45,7 @@
     
         <button (click)="notificationsDrawer.toggle()">
           <div class="home flex items-center h-8 space-x-3">
-            <mat-icon class="material-symbols-outlined">favorite</mat-icon>
+            <mat-icon class="">favorite</mat-icon>
             <span class="text-lg">Notification</span>
           </div>
 
